force-app/main/default/objects/Activity/fields/Artefact__c.field-meta.xml
<CustomField>
    <fullName>Artefact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Artefact</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>ACT-F01: Value does not exist or does not an invoice</errorMessage>
        <filterItems>
            <field>Artefact__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Invoice</value>
        </filterItems>
        <filterItems>
            <field>Artefact__c.Project__c</field>
            <operation>equals</operation>
            <valueField>$Source.WhatId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Artefact__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>