force-app/main/default/objects/Activity/fields/Attempt_Number__c.field-meta.xml
<CustomField>
    <fullName>Attempt_Number__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number of Attempts</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>