force-app/main/default/objects/Activity/fields/Call_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Call_Outcome__c</fullName>
    <description>User captures the outcome of their Calls with Life Support Customers during incidents for power outage.</description>
    <label>Call Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Spoke to customer - backup plan enacted, customer currently safe</fullName>
            </value>
            <value>
                <fullName>Spoke to customer - sent to DEECA</fullName>
            </value>
            <value>
                <fullName>No answer - left voicemail</fullName>
            </value>
            <value>
                <fullName>No answer - no voicemail</fullName>
            </value>
            <value>
                <fullName>No answer - sent LSC SMS</fullName>
            </value>
            <value>
                <fullName>Spoke to customer - life support no longer required</fullName>
            </value>
            <value>
                <fullName>Multiple calls no answer - welfare check required, sent to DEECA</fullName>
            </value>
            <value>
                <fullName>Incorrect number - welfare check required, no contact details</fullName>
            </value>
            <value>
                <fullName>Incident Resolved - task closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>