force-app/main/default/objects/Activity/fields/Close_On_Incident_Resolved__c.field-meta.xml
<CustomField>
    <fullName>Close_On_Incident_Resolved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This flag indicates that When an incident is resolved, should this task be auto closed if in Open status.</description>
    <label>Auto Close on Incident Resolved</label>
    <type>Checkbox</type>
</CustomField>