force-app/main/default/objects/Activity/fields/dcp_External_Id__c.field-meta.xml
<CustomField>
    <fullName>dcp_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>DCP External Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>