force-app/main/default/objects/Activity/fields/Due_date__c.field-meta.xml
<CustomField>
    <fullName>Due_date__c</fullName>
    <description>This field displays the date when the call was answered.</description>
    <inlineHelpText>Set to the date of the call in the Agent&apos;s local time.</inlineHelpText>
    <label>Due date</label>
    <type>Date</type>
</CustomField>