force-app/main/default/objects/Activity/fields/ipSCAPE_Customer_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>ipSCAPE_Customer_Phone_Number__c</fullName>
    <description>This is the phone number for the contact</description>
    <inlineHelpText>Customer Phone Number</inlineHelpText>
    <label>Customer Phone Number</label>
    <type>Phone</type>
</CustomField>