force-app/main/default/objects/Activity/fields/ipSCAPE_Time_In_Queue__c.field-meta.xml
<CustomField>
    <fullName>ipSCAPE_Time_In_Queue__c</fullName>
    <description>This field displays the time the caller waited before the call was answered.</description>
    <inlineHelpText>The time in the queue.</inlineHelpText>
    <label>Time In Queue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>