force-app/main/default/objects/Activity/fields/Link_Call_Recording__c.field-meta.xml
<CustomField>
    <fullName>Link_Call_Recording__c</fullName>
    <formula>IF(
CallObject = &quot; &quot;, &quot; &quot;, HYPERLINK
(&quot;https://ausnetservicesv2.ipscape.com.au/workspace/home?view=voice_recording&amp;sub=search&amp;agntintrcn_id=&quot; &amp; CallObject, &quot;Open Call Recording&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Link Call Recording</label>
    <type>Text</type>
</CustomField>