force-app/main/default/objects/Activity/fields/Log_a_LSC_Call__c.field-meta.xml
<CustomField>
    <fullName>Log_a_LSC_Call__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this flag only when user wants to log call attempt to end customer.</description>
    <label>Log a LSC Call</label>
    <type>Checkbox</type>
</CustomField>