force-app/main/default/objects/Activity/fields/LSC_Welfare_Check__c.field-meta.xml
<CustomField>
    <fullName>LSC_Welfare_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LSC Welfare Check Required</label>
    <type>Checkbox</type>
</CustomField>