force-app/main/default/objects/Activity/fields/OfferStatus__c.field-meta.xml
<CustomField>
    <fullName>OfferStatus__c</fullName>
    <label>Offer Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending answer</fullName>
                <default>true</default>
                <label>Pending answer</label>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>