force-app/main/default/objects/Activity/fields/OtherRejectionReason__c.field-meta.xml
<CustomField>
    <fullName>OtherRejectionReason__c</fullName>
    <label>Other Rejection Reason</label>
    <type>TextArea</type>
</CustomField>