force-app/main/default/objects/Activity/fields/RejectionReasons__c.field-meta.xml
<CustomField>
    <fullName>RejectionReasons__c</fullName>
    <description>Used to indicate the rejection reason of a project assignment task.</description>
    <label>Rejection Reasons</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ProjectRejectionReasons</valueSetName>
    </valueSet>
</CustomField>