force-app/main/default/objects/Activity/fields/Task_Age__c.field-meta.xml
<CustomField>
    <fullName>Task_Age__c</fullName>
    <description>Formula to calculate Task Age for :Life Support Customers</description>
    <formula>IF(NOT(IsClosed),
    Task_Age_hrs__c + 
    ((Task_Age_mins__c - (Task_Age_hrs__c*60)) / 100),
    Task_Closed_Age__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Task Age (HH.mm)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>