force-app/main/default/objects/Activity/fields/Task_Age_hrs__c.field-meta.xml
<CustomField>
    <fullName>Task_Age_hrs__c</fullName>
    <description>For mula to calculate task age Hours for Life Suppport Customer</description>
    <formula>FLOOR((NOW() - CreatedDate )*24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Task Age (hrs)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>