force-app/main/default/objects/Activity/fields/Task_Age_mins__c.field-meta.xml
<CustomField>
    <fullName>Task_Age_mins__c</fullName>
    <description>Formula to calculate Task age minutes part for Life support customers.</description>
    <formula>FLOOR((NOW() - CreatedDate )*1440)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Task Age (mins)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>