force-app/main/default/objects/Activity/fields/Task_Closed_Age__c.field-meta.xml
<CustomField>
    <fullName>Task_Closed_Age__c</fullName>
    <label>Task Closed Age</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>